second navbar css changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         crossorigin=""></script>
     <script src="https://unpkg.com/@mapbox/leaflet-pip@latest/leaflet-pip.js"></script>
     <meta charset="utf-8">
-
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 </head>
 
 <body>
