--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="border.js"></script>
     <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -21,7 +22,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-expand-lg navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -76,7 +77,7 @@
 </div>
 
 <div id="mapid">
-    <div id="nav-column" class="col-sm-2">
+    <div id="nav-column" class="col-sm-12 col-md-12">
         <nav id="panButtons">
             <ul>
                 <li id='navUp'>
@@ -110,8 +111,8 @@
     </div>
     <div class="col-sm-9"></div>
     <div id="button-column" class="col-sm-1">
-        <button id="start" type="button" class="btn btn-success">Start a Game</button>
-        <button id="guess" disabled type="button" class="btn btn-primary" data-toggle="modal" data-target="#guessModal">Guess the Spot</button>
+        <button id="start" type="button" class="btn btn-success">Start Game</button>
+        <button id="guess" disabled type="button" class="btn btn-primary" data-toggle="modal" data-target="#guessModal">Guess Spot</button>
         <button id="quit" disabled type="button" class="btn btn-info">Give Up!</button>
     </div>
     <div class="modal fade" id="guessModal" tabindex="-1" role="dialog" aria-labelledby="guessModalLabel" aria-hidden="true">
