mobile optimization finished

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <div id='endBanner'>
     <h2>
-        How well do you know Vermont? See if you can guess which county you land in!
+        How well do you know Vermont? See if you can guess in which county you land in as few moves as possible.
     </h2>
 
 </div>
