modal css fixes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     <img class="county Vermont" src="vermont-county-map.png">
                     
                                 </div>
-                        <form>
+                        <!-- <form>
                             <select id='countySelector' class='form-control'>
                                 <option selected>Choose a County</option>
                                 <option value='Addison County'>Addison County</option>
@@ -186,14 +186,14 @@
                                 <option value='Windham County'>Windham County</option>
                                 <option value='Windsor County'>Windsor County</option>
                             </select>
-                    </form>
+                    </form> -->
                     <h5 class='hiddenError'>
                             Please guess a county.
                     </h5>
                 </div>
                 <div class="modal-footer">
                     <button id='cancelGuess' type="button" class="btn btn-secondary" data-dismiss="modal">Cancel Guess</button>
-                    <button id='confirmGuess' type="button" class="btn btn-primary">Guess!</button>
+                    <!-- <button id='confirmGuess' type="button" class="btn btn-primary">Guess!</button> -->
                 </div>
             </div>
         </div>
@@ -412,7 +412,6 @@
                 processIncorrect()
             }
         }
-
 
         function giveUp() {
             processIncorrect()
